# clicrate

./: Cargo.toml
src/: cli.rs  main.rs
